--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $color-bg: rgb(88, 82, 82);
 $color-button: rgb(88, 82, 82);
 $color-input: white;
 
-$default-unit: 1em;
-$corner-form: 0.4em;
+$unit-default: 1em;
+$form-corner: 0.4em;
+$button-corner: 0.4em;
 $margin-default: 0.5em;
