--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -31,8 +31,17 @@ button {
     input {
       flex: auto;
       display: inline-block;
+      border: 1px solid grey;
       min-height: $unit-default * 2;
       padding: 0 $unit-default * 0.66;
+    }
+
+    .TASK-ERROR {
+      border: 1px solid red;
+    }
+
+    .TASK-SUCCESS {
+      border: 1px solid green;
     }
 
     &__send {
