--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 $color-bg: rgb(88, 82, 82);
 $color-button: rgb(88, 82, 82);
 $color-input: white;
+$color-success: green;
+$color-error: red;
 
 $unit-default: 1em;
 $form-corner: 0.4em;
