--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -21,35 +21,41 @@ button {
     }
   }
 
-  &__input__form {
-    margin: $margin-default;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  &__input {
+    &__form {
+      margin: $margin-default;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
 
-    input {
-      flex: auto;
-      display: inline-block;
-      border: 1px solid grey;
-      min-height: $unit-default * 2;
-      padding: 0 $unit-default * 0.66;
-    }
+      input {
+        flex: auto;
+        display: inline-block;
+        border: 1px solid grey;
+        min-height: $unit-default * 2;
+        padding: 0 $unit-default * 0.66;
+      }
 
-    .TASK-ERROR {
-      border: 1px solid red;
-    }
+      &__send {
+        margin: 0 $margin-default;
 
-    .TASK-SUCCESS {
-      border: 1px solid green;
-    }
-
-    &__send {
-      margin: 0 $margin-default;
-
-      button {
-        background-color: $color-button;
+        button {
+          background-color: $color-button;
+        }
       }
     }
+  }
+}
+
+.ERROR {
+  input {
+    border: 1px solid $color-error;
+  }
+}
+
+.SUCCESS {
+  input {
+    border: 1px solid $color-success;
   }
 }
