wip updates and added db sorting

--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -46,6 +46,14 @@ button {
       }
     }
   }
+
+  &__items {
+    &__item {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
 }
 
 .ERROR {
