--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -1,10 +1,3 @@
-.text,
-button {
-  font-size: $unit-default;
-  margin: $margin-default;
-  padding: $margin-default * 0.5 $margin-default;
-}
-
 .task {
   margin: $margin-default;
 
@@ -52,18 +45,11 @@ button {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+
+      &-text,
+      &-input {
+        flex-grow: 2;
+      }
     }
-  }
-}
-
-.ERROR {
-  input {
-    border: 1px solid $color-error;
-  }
-}
-
-.SUCCESS {
-  input {
-    border: 1px solid $color-success;
   }
 }
