--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -8,3 +8,7 @@ $unit-default: 1em;
 $form-corner: 0.4em;
 $button-corner: 0.4em;
 $margin-default: 0.5em;
+$padding-default: 0.25em;
+
+
+$transition-default: 0.3s;
