--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -1,3 +1,15 @@
+.test {
+  background-color: darkseagreen;
+}
+
+.test1 {
+  background-color: blue;
+}
+
+.test2 {
+  background-color: darkgoldenrod;
+}
+
 .task {
   margin: $margin-default;
 
