--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $color-button: rgb(88, 82, 82);
 $color-input: white;
 $color-success: green;
 $color-error: red;
+$color-select: darkgrey;
 
 $unit-default: 1em;
 $form-corner: 0.4em;
@@ -10,5 +11,4 @@ $button-corner: 0.4em;
 $margin-default: 0.5em;
 $padding-default: 0.25em;
 
-
-$transition-default: 0.3s;
+$transition-default: 1s;
