--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -1,11 +1,14 @@
 $color-bg: rgb(88, 82, 82);
 $color-button: rgb(88, 82, 82);
 $color-input: white;
-$color-success: green;
-$color-error: red;
+$color-none: #e7e1dd;
+$color-success: #589c58;
+$color-error: #9c5858;
 $color-select: darkgrey;
 
 $unit-default: 1em;
+$unit-icon: 1.5em;
+
 $form-corner: 0.4em;
 $button-corner: 0.4em;
 $margin-default: 0.5em;
