--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -8,10 +8,11 @@ $color-select: darkgrey;
 
 $unit-default: 1em;
 $unit-icon: 1.5em;
+$unit-icon-big: 3em;
 
 $form-corner: 0.4em;
 $button-corner: 0.4em;
 $margin-default: 0.5em;
 $padding-default: 0.25em;
 
-$transition-default: 0.33s;
+$transition-default: 0.3s;
