--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -9,6 +9,7 @@ $font-size-lg: $unit-default * 1.25;
 $font-size-xl: $unit-default * 1.66;
 
 $unit-icon: 1.5em;
+$unit-icon-med: 1.75em;
 $unit-icon-big: 3em;
 
 $border-size: $unit-default * 0.1;
